# zettai_bootstrap

./: .gitignore  .gitmodules  .ocamlformat  Makefile  dune-project  flake.nix
.githooks/: pre-commit
.helix/: languages.toml
lib/: Exec.ml  Exec.mli  Lex.ml  Lex.mli  Parse.ml  Parse.mli  dune  exec.ml  lex.ml  lex.mli  parse.ml  parse.mli  util.ml  util.mli
nix/: flake.nix
scripts/: test-coverage.sh
