(env
 (dev
  (flags
   (:standard -w -30 -warn-error -26-32-37))))

(library
 (name zettai_bootstrap)
 (public_name zettai_bootstrap)
 (libraries core ounit2 starpath)
 (instrumentation
  (backend bisect_ppx))
 (inline_tests)
 (preprocess
  (pps ppx_assert ppx_compare ppx_deriving.show ppx_expect ppx_inline_test
    ppx_sexp_conv ppx_variants_conv)))
